Creo y estilizo el header

--- a/login/nuevoUsuario.html
+++ b/login/nuevoUsuario.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-
+        <a href="#">Gym Fitness</a>
+        <a href="#" class="boton_header">Planes</a>
+        <a href="#" class="boton_header">Contacto</a>
+        <a href="#" class="boton_header">Iniciar/Registrate</a>
     </header>
 
     <nav>
