--- a/login/login.html
+++ b/login/login.html
@@ -9,7 +9,7 @@
     </head>
 
 
-    <body>
+    <body class="bodyHome">
         <header>
 
         </header>
@@ -23,8 +23,8 @@
                 <img class="iconoUser" src="../img/userIcono.png" alt="">
                 <h1>Bienvenido</h1>
                 <form action="" class="formLogin">
-                    <input id="nombreUsuario" type="text" placeholder="Ingrese Usuario">
-                    <input id="contraUsuario" type="password" placeholder="Ingrese Contraseña">
+                    <input id="nombreUsuario" type="text" placeholder="Ingrese Usuario" required>
+                    <input id="contraUsuario" type="password" placeholder="Ingrese Contraseña" required>
                     <a id="olvContraLogin" href="#">¿Olvidaste la contraseña?</a>
                     <button id="ingresarUsuario">Ingresar</button>
                     <a id="crearUsuario" href="nuevoUsuario.html">Crear nuevo usuario</a>
