--- a/login/nuevoUsuario.html
+++ b/login/nuevoUsuario.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style/style.css">
     <title>Registrarse</title>
 </head>
-<body>
+<body class="bodyHome">
     <header>
 
     </header>
