modificaciones en el footer

--- a/headeryfooter.html
+++ b/headeryfooter.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=he, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -23,13 +24,17 @@
     <main>
 
     </main>
-    <footer>
-        <ul>
-            <li>Tel: +54 11 85749302</li>
-            <li><a href="https://api.whatsapp.com/send?phone=+541168515271"></a></li>
-            <li></li>
-            <li></li>
-            <li></li>
+    <footer class="miFooter">
+        <ul class="listaFooter">
+            <li>Tel: +54 11 41665642</li>
+            <li><a href="https://api.whatsapp.com/send?phone=+541141665642"><img src="img/icon-whatsapp.svg" alt=""  class="iconos"></a></li>
+        </ul>
+
+        <ul class="listaFooter">
+            <li><a href="https://www.facebook.com/geminis.club.01/"><img src="img/icon-facebook.svg" alt=""  class="iconos"></a></li>
+            <li><a href="infogeminisgym@gmail.com"><img src="img/icon-gmail.svg" alt="" class="iconos"></a></li>
+            <li><a href="https://www.instagram.com/geminis.club/?hl=es"><img src="img/icon-instagram.svg" alt=""  class="iconos"></a></li>
+            <li><a href="https://www.youtube.com/channel/UCZaWOYAKbefQVMvPJDKexhA"><img src="img/icon-youtube.svg" alt=""  class="iconos"></a></li>
         </ul>
     </footer>
 </body>
