modificaciones en la vista y arrancamos con el Home

--- a/login/nuevoUsuario.html
+++ b/login/nuevoUsuario.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style/style.css">
     <title>Registrarse</title>
 </head>
-<body class="bodyHome">
+<body class="bodyLogin">
     
     <header>
      
