modificaciones en el home

--- a/index.html
+++ b/index.html
@@ -24,40 +24,63 @@
 
     <main class="mainHome">
 
-        <section>
-            <h2>Actividades</h2>
+        <section class="seccionActividades">
+            <h2 class="tituloUnoHome">Actividades</h2>
 
-            <h3>Conoce nuestras actividades</h3>
+            <h3 class="tituloDosHome">Conoce nuestras actividades</h3>
 
             <article class="carta">
-
+                <img src="img/boxeo.jpg" alt="">
+                <h2>Boxeo</h2>
+                <button>Saber Mas</button>
             </article>
 
             <article class="carta">
-
+                <img src="img/zumba.jpg" alt="">
+                <h2>Zumba</h2>
+                <button>Saber Mas</button>
             </article>
 
             <article class="carta">
-
+                <img src="img/spinning.jpg" alt="">
+                <h2>Spinning</h2>
+                <button>Saber Mas</button>
             </article>
 
-            <article class="carta">
-
+            <article class="carta masActividades">
+                <a href="">Saber mas</a>
             </article>
 
         </section>
 
         
-        <section>
-            <h2>Planes</h2>
+        <section class="seccionActividades">
+            <h2 class="tituloUnoHome">Planes</h2>
 
-            <h3>Contrata un plan</h3>
+            <h3 class="tituloDosHome">Contrata Un Plan</h3>
 
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
-            
+            <article class="carta">
+                <img src="img/medallaBronce.png" alt="">
+                <h2>Bronce</h2>
+                <button>Saber Mas</button>
+            </article>
+
+            <article class="carta">
+                <img src="img/medallaPlata.png" alt="">
+                <h2>Plata</h2>
+                <button>Saber Mas</button>
+            </article>
+
+            <article class="carta">
+                <img src="img/medallaOro.png" alt="">
+                <h2>Oro</h2>
+                <button>Saber Mas</button>
+            </article>
+
+            <article class="carta masPlanes">
+                <a href="">Saber mas</a>
+            </article>
+
         </section>
 
         <section>
