avanzamos un poco con el home

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </article>
 
             <article class="carta masActividades">
-                <a href="">Saber mas</a>
+                <a href="">Saber Mas</a>
             </article>
 
         </section>
@@ -78,15 +78,14 @@
             </article>
 
             <article class="carta masPlanes">
-                <a href="">Saber mas</a>
+                <a href="">Saber Mas</a>
             </article>
 
         </section>
 
-        <section>
+        <section class="nosotrosHome">
             <h2>Nosotros</h2>
-
-            <video src=""></video>
+            <video src=""> aca va un video</video>
         </section>
 
     </main>
