Cambio estilo footers

--- a/login/nuevoUsuario.html
+++ b/login/nuevoUsuario.html
@@ -58,7 +58,7 @@
     </main>
     
             
-    <footer class="miFooter">
+    <footer class="miFooter" id="footer_nuevoUser">
         <ul class="listaFooter">
             <li>Tel: +54 11 41665642</li>
             <li><a href="https://api.whatsapp.com/send?phone=+541141665642"><img src="../img/icon-whatsapp.svg" alt="" class="iconos"></a></li>
