--- a/login/login.html
+++ b/login/login.html
@@ -38,7 +38,7 @@
             </div>            
         </main>
         
-        <footer class="miFooter">
+        <footer class="miFooter" id="footer_login">
             <ul class="listaFooter">
                 <li>Tel: +54 11 41665642</li>
                 <li><a href="https://api.whatsapp.com/send?phone=+541141665642"><img src="../img/icon-whatsapp.svg" alt="" class="iconos"></a></li>
