modificaciones y creacion de setting admin

--- a/login/nuevoUsuario.html
+++ b/login/nuevoUsuario.html
@@ -12,11 +12,11 @@
     <header>
      
         <nav>
-            <a href="#">Géminis club</a>
+            <a href="../index.html">Géminis club</a>
             <ul>
                 <li><a href="#" class="boton_header">Planes</a></li>
                 <li><a href="#" class="boton_header">Contacto</a></li>
-                <li><a href="#" class="boton_header">Iniciar/Registrate</a></li>
+                <li><a href="login.html" class="boton_header">Iniciar/Registrate</a></li>
             </ul>  
             
         </nav>
