--- a/admin/setting.html
+++ b/admin/setting.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=he, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
+    <script src="../js/admin_settings.js"> </script>
     <title>Setting</title>
 </head>
 <body>
@@ -23,12 +24,42 @@
     </header>
 
     <main class="mainSettingAdmin">
-            <h1>Setting</h1>
-            <form action="" class="formSettingAdmin">
-                <button>Usuarios</button>
-                <button>Actividades</button>
-                <button>Planes</button>
-            </form>
+        <h1>Setting</h1>
+        <section class="formSettingAdmin">
+            <button id="boton_usuarios">Usuarios</button>
+            <button id="boton_actividades">Actividades</button>
+            <button id="boton_planes">Planes</button>
+        </section>
+
+        <section id="settings">
+            <section class="sect_hidden" id="settings_usuarios">
+                <section>
+                    <h2>Lista de Usuarios</h2>
+                    <input type="text" placeholder="Buscar usuario">
+                </section>
+                <section>
+                    <section class="card_usuario">
+                        <h3>Usuario x</h3>
+                        <address>fulano@gmail.com</address>
+                        <p>Plan: Bronce</p>
+                        <p>Actividades inscritas</p>
+                        <ul>
+                            <li>Boxeo 10:00 - 11:00</li>
+                        </ul>
+                        <button>Dar de Baja</button>
+                    </section>
+                </section>
+            </section>
+    
+            <section class="sect_hidden" id="settings_actividades">
+                <h2>Lista de Actividades</h2>
+            </section>
+            
+            <section class="sect_hidden" id="settings_planes">
+                <h2>Lista de Planes</h2>
+            </section>
+        </section>
+
     </main>
 
     <footer class="miFooter">
