Cambios en admin_settings js

--- a/login/login.html
+++ b/login/login.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="#" class="boton_header">Planes</a></li>
                     <li><a href="#" class="boton_header">Contacto</a></li>
-                    <li><a href="login.html" class="boton_header">Iniciar/Registrate</a></li>
+                    <li><a href="login.html" class="boton_header">Ingresar</a></li>
                 </ul>  
                 
             </nav>
@@ -33,6 +33,7 @@
                     <input id="contraUsuario" type="password" placeholder="Ingrese Contraseña" required>
                     <a id="olvContraLogin" href="#">¿Olvidaste la contraseña?</a>
                     <button id="ingresarUsuario">Ingresar</button>
+                    <!-- <input type="submit" value="Ingresar"> -->
                     <a id="crearUsuario" href="nuevoUsuario.html">Crear nuevo usuario</a>
                 </form>
             </div>            
